# cmsc-170

./: README.md  output.txt  pyproject.toml
src/[1]bag_of_words/: app.py  functions.py  output.txt
src/[1]bag_of_words/files/: 001.txt  002.txt  003.txt
src/[2]perceptron/: app.py  functions.py  testcases.txt
src/[2]perceptron/files/: 3x.txt  and.txt  input.txt  nand.txt  nor.txt  not_2.txt  xor.txt
src/[3]naive_laplace/: app.py  classify.out  functions.py
src/kmeans/: app.py  output.csv  outputsamplerun.csv
src/knn/: app.py  output.txt
src/knn/data01/: input.in
src/knn/data02/: fruits.csv  input.in
