[project]
name = "170-exercises"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kurt Punzalan", email = "kurtbriandaine.1225@gmail.com" }
]
dependencies = [
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "pysimplegui>=5.0.7",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/_170_exercises"]
