[project]
dependencies = [
    "prettytable>=3.12.0",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "pysimplegui>=5.0.7",
]
name = "170-exercises"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Kurt Punzalan", email = "kurtbriandaine.1225@gmail.com" }]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/_170_exercises"]

[tool.rye.scripts]
bow = "python src/[1]bag_of_words/app.py"
